commerce-cloud-shop-api/2.1/modules/ROOT/pages/shop-api-connector-examples.adoc
= Commerce Cloud B2C Shop Connector 2.1 Example - Mule 4

Commerce Cloud B2C Shop Connector is an operation-based connector, which means that when you add the connector to your flow, you need to configure a specific operation for the connector to perform.
Commerce Cloud B2C Shop Connector supports two different types of configuration.
This example uses the Customer Auth Connection Provider configuration.
After successful execution of the Get Customer operation we get the customer result.

To get an access token, you can use *Authenticate Customer* and *Get Access Token* (if you are using B2C Shop Connector 2.1 and later) or you can use *Authorize Customer*.

*Authenticate Customer* and *Get Access Token*

[start = 1]
. Create a new Mule application in Anypoint Studio, configuring port 8081 as HTTP Listener and the path, for example, `/login`. 
. Before you can use *Authenticate Customer*, you must prepare a redirect URI for handling the redirect from SLAS that contains the shopper USID and authorization code. The redirect URI must be publicly accessible, so you must use a tool such as webhook.site or ngrok to expose a localhost endpoint externally.
. Drag the *Authenticate Customer* operation from the Mule palette to the flow.
. For registered users, you must register the token using the code from *Authenticate Customer* callback response. Create a new HTTP Listener on port 8081 with the path `/register`.
. Drag the *Get Access Token* operation from the Mule palette to the flow with the path `/register`.
. Obtain the required parameters for the *Authenticate Customer* and *Get Access Token* operations from Postman.
. For both of the operations, select the Commerce Cloud B2C Shop Connector Shopper Token Config from B2C Shop Connector and configure the required values or add a new configuration by clicking the green plus (+) symbol.
. After entering all the required parameters, save the Mule project.
. Run the project as a Mule application by right-clicking the project name in *Package Explorer* and selecting *Run As > Mule Application*.
. Navigate to `\http://localhost:8081/auth`, open Postman, and check the response. You should see an empty body in Postman with the status 200, which means a callback request is sent to the redirect URI.
. Retrieve the code query parameter from the callback request. This step differs based on how you handle the OAuth2 callback.
. Use the code in the second request to construct a new request to *Get Access Token*.
. Navigate to `\http://localhost:8081/register`, open Postman, and check the response. After a successful call, retrieve the access and refresh token to use in other SCAPI calls. 	Provide this JWT token from Postman as an authorization header parameter to perform operations.

*Authorize Customer*

[start = 1]
. Perform an *Authorize Customer* operation to get the Shopper JWT token.

[start = 2]
. Create a new Mule application in Anypoint Studio (Studio), configuring port 8081 as HTTP Listener and the path as "/customer/shopper-customers/{version}/organizations/{organizationId}/customers/actions/login".

image::shop-connector-authorize-customer-http-listener-config.jpg[]

[start = 3]
. Add Operation, "Authorize Customer" from the palette to the flow.

image::shop-connector-authorize-customer.png[]

[start = 4]
. Obtain the required parameters for Authorize Customer operation from the postman.

image::shop-connector-authorize-customer-body.jpg[]

[start = 5]
. Select the Commerce Cloud B2C Shop Connector Shopper Token Config from Commerce Cloud B2C Shop Connector and configure it with the required values or add a new configuration by clicking the green plus (+) symbol.

image::shop-connector-shopper-token-config.jpg[]

[start = 6]
. After entering all the required parameters, save the Mule project.

. Run the project as a Mule application by right-clicking the project name in Package Explorer and selecting Run As > Mule Application.

. Navigate to http://localhost:8081/customer/shopper-customers/{version}/organizations/{organizationId}/customers/actions/login, open Postman, and check the response.

. You should see the JWT Token in the response header.
Provide this JWT Token from Postman as authorization header parameter to perform operations.

*Get Customer*

[start = 1]
. Create a new Mule application in Anypoint Studio (Studio), configuring port 8081 as HTTP Listener and the path as "/customer/shopper-customers/{version}/organizations/{organizationId}/customers/{customerId}".

image::shop-connector-http-listener-config.jpg[]

[start = 2]
. Add Operation, "Get Customer" from the palette to the flow.

image::shop-connector-get-customer-flow.png[]

[start = 3]
. Obtain the required parameters for Get Customer operation from the postman.

image::shop-connector-get-customer-body.jpg[]

[start = 4]
. Select the Commerce Cloud B2C Shop Connector Config from Commerce Cloud B2C Shop Connector and configure it with the required values or add a new configuration by clicking the green plus (+) symbol.

image::shop-connector-customer-auth-config.jpg[]

[start = 5]
. In the above image we are using the authentication token from Authorize Customer as Authorization parameter value.

[start = 6]
. After entering the all required parameters, save the Mule project.

. Run the project as a Mule application by right-clicking the project name in Package Explorer and selecting Run As > Mule Application.

. Navigate to http://localhost:8081/customer/shopper-customers/{version}/organizations/{organizationId}/customers/{customerId}, open Postman, pass xref:Authorize Customer[Shopper JWT Token] from header and check the response.

. You should see the customer details in the output.

== XML for Authenticate Customer and Get Access Token

Paste this code into the Studio XML editor to quickly load the flow for this example into your Mule app:

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
	xmlns:commerce-cloud-shopper-api="http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api"
	xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api/current/mule-commerce-cloud-shopper-api.xsd
http://www.mulesoft.org/schema/mule/ee/core http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd">
	<http:listener-config name="HTTP_Listener_config" doc:name="HTTP Listener config" doc:id="222ac542-6761-4737-a1ae-771e3bbb1e4c">
		<http:listener-connection host="0.0.0.0" port="${http.port}" />
	</http:listener-config>
	<commerce-cloud-shopper-api:customer-auth-config name="Commerce_Cloud_B2C_Shop_Connector_Customer_auth_config" doc:name="Commerce Cloud B2C Shop Connector Customer auth config" doc:id="76f997f2-ca78-4930-b2ed-8b16dbbae22c" >
		<commerce-cloud-shopper-api:shopper-connection authorization="#[attributes.headers.Authorization]" baseUri="${shopper.baseUri}"/>
	</commerce-cloud-shopper-api:customer-auth-config>
	<commerce-cloud-shopper-api:shopper-token-config name="Commerce_Cloud_B2C_Shop_Connector_Shopper_token_config" doc:name="Commerce Cloud B2C Shop Connector Shopper token config" doc:id="65b28685-f9c4-442a-89d1-b50231bf2892" >
		<commerce-cloud-shopper-api:shopper-token-connection baseUri="${shopper.baseUri}"/>
	</commerce-cloud-shopper-api:shopper-token-config>
	<commerce-cloud-shopper-api:shopper-token-config name="Commerce_Cloud_B2C_Shop_Connector_Shopper_token_config1" doc:name="Commerce Cloud B2C Shop Connector Shopper token config" doc:id="f8de2bd8-62cc-446e-adfb-b2c3aa962157" >
		<commerce-cloud-shopper-api:shopper-token-connection baseUri="https://sandbox-001.api.commercecloud.salesforce.com" />
	</commerce-cloud-shopper-api:shopper-token-config>
	<configuration-properties doc:name="Configuration properties" doc:id="7a5d3e60-ee62-4408-afe9-1d6141a78b2d" file="config.yaml" />
	<flow name="get-productFlow" doc:id="65322929-7410-487b-8f8a-93f9b1bd2ade" >
		<http:listener doc:name="Listener" doc:id="dcb58bc6-ae42-461c-9d9a-444536ff21f0" config-ref="HTTP_Listener_config" path="/product"/>
		<commerce-cloud-shopper-api:get-product-shopper-products-organizations-products-by-version-organization-id-id doc:name="Get Product" doc:id="38a7db5b-8cfe-4974-9017-2f1488f6ad4b" version="${shopper.version}" organizationId="${shopper.orgId}" config-ref="Commerce_Cloud_B2C_Shop_Connector_Customer_auth_config" id="#[attributes.queryParams.productId]" siteId="${shopper.siteId}">
		</commerce-cloud-shopper-api:get-product-shopper-products-organizations-products-by-version-organization-id-id>
		<logger level="INFO" doc:name="Logger" doc:id="ab6895ca-e898-489e-8793-18647aa82cbc" message="#[payload]"/>
	</flow>
	<flow name="get-guest-access-tokenFlow" doc:id="b1eba5c8-f450-4938-8bf5-cc4ab4f35c33" >
		<http:listener doc:name="Listener" doc:id="e1e85e2e-f361-49fd-a2c0-dc962a45f8d1" config-ref="HTTP_Listener_config" path="/guestaccess" />
		<commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-token-by-version-organization-id doc:name="Get Access Token" doc:id="c6aa0599-a177-40c9-a8c8-8a7114f9ec32" config-ref="Commerce_Cloud_B2C_Shop_Connector_Shopper_token_config" version="${shopper.version}" organizationId="${shopper.orgId}" authorization="${shopper.clientAuthHeader}" >
			<commerce-cloud-shopper-api:custom-query-params ><![CDATA[#[output application/java
---
{
	"grant_type" : "client_credentials",
	"channel_id" : "${shopper.siteId}"
}]]]></commerce-cloud-shopper-api:custom-query-params>
			<commerce-cloud-shopper-api:custom-headers ><![CDATA[#[output application/java
---
{
	"Content-Type" : "application/x-www-form-urlencoded"
}]]]></commerce-cloud-shopper-api:custom-headers>
		</commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-token-by-version-organization-id>
	</flow>
	<flow name="get-refresh-tokenFlow" doc:id="835ccf68-1ac6-4277-ae31-0c403eace61d" >
		<http:listener doc:name="Listener" doc:id="f6c085ca-a211-4c9b-938f-1bc679a7d450" config-ref="HTTP_Listener_config" path="/refresh" />
		<commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-token-by-version-organization-id doc:name="Get Refresh Token" doc:id="68f9a144-6126-4853-a671-f0bd578bcb8b" config-ref="Commerce_Cloud_B2C_Shop_Connector_Shopper_token_config" version="${shopper.version}" organizationId="${shopper.orgId}" authorization="${shopper.clientAuthHeader}">
			<commerce-cloud-shopper-api:custom-query-params ><![CDATA[#[output application/java
---
{
	"grant_type" :  "refresh_token",
	"refresh_token" : attributes.queryParams.refresh_token
	}]]]></commerce-cloud-shopper-api:custom-query-params>
			<commerce-cloud-shopper-api:custom-headers ><![CDATA[#[output application/java
---
{
	"Content-Type" : "application/x-www-form-urlencoded"
}]]]></commerce-cloud-shopper-api:custom-headers>
		</commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-token-by-version-organization-id>
		<logger level="INFO" doc:name="Logger" doc:id="1177fb94-b7c1-46ff-aebd-e12db3a1a65a" message="#[payload]" />
	</flow>
	<flow name="get-guest-access-tokenFlow1(delete)" doc:id="c1315ac6-363a-491d-96a1-a9b6f01b740b" >
		<http:listener doc:name="Listener" doc:id="baf394dd-0d74-4c9d-9013-f1c0fd7698a3" config-ref="HTTP_Listener_config" path="/authenticateRegisteredUser" />
		<commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-login-by-version-organization-id doc:name="Authenticate Customer" doc:id="2fbeaf41-c224-431d-b5d7-c81471cb980a" config-ref="Commerce_Cloud_B2C_Shop_Connector_Shopper_token_config" version="${shopper.version}" organizationId="${shopper.orgId}" authorization="#[attributes.headers.Authorization]">
			<commerce-cloud-shopper-api:content ><![CDATA[#[%dw 2.0
output application/x-www-form-urlencoded
---
{
"grant_type":"authorization_code_pkce",
"client_id":"3a15f34e-fecd-4fcc-8235-86b70978e629",
"redirect_uri":"http://localhost:9010/callback",
"code_challenge": attributes.queryParams.code_challenge,
"channel_id": "SiteGenesis"
}]]]></commerce-cloud-shopper-api:content>
		</commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-login-by-version-organization-id>
		<logger level="INFO" doc:name="Logger" doc:id="ad2007cb-d7dd-42b2-a3c2-ec557073f351" message="#[payload]"/>
	</flow>
	<flow name="login" doc:id="dcb3944c-d381-448c-ad6c-268d6d4f0836" >
		<http:listener doc:name="Listener" doc:id="4644d4f1-30f0-40b8-896e-e75ef861d15e" config-ref="HTTP_Listener_config" path="/login" responseStreamingMode="ALWAYS">
		</http:listener>
		<logger level="INFO" doc:name="Logger" doc:id="4e556c46-7107-4ddd-96d9-c2697c8506fe" message="#[payload]"/>
		<commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-login-by-version-organization-id doc:name="Authenticate Customer" doc:id="99988204-4b25-4349-8160-36bce33922c3" config-ref="Commerce_Cloud_B2C_Shop_Connector_Shopper_token_config" version="${shopper.version}" organizationId="${shopper.orgId}" authorization="#[attributes.headers.Authorization]" streamingType="ALWAYS">
		</commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-login-by-version-organization-id>
		<logger level="INFO" doc:name="Logger" doc:id="e13edb8c-1ad5-4f56-ab83-80237b8dd170" message="Error: #[error.description], Payload: #[payload]"/>
	</flow>
	<flow name="register-user-access-token-flow" doc:id="c2ce86b8-e573-441d-9e56-e8ad904c51ae" >
		<http:listener doc:name="Listener" doc:id="18c0adbc-bc5a-4909-b8b9-3787a522802b" config-ref="HTTP_Listener_config" path="/register" />
		<commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-token-by-version-organization-id doc:name="Get Access Token" doc:id="3a7fe54e-b718-4db6-b7c6-f43161023ddd" config-ref="Commerce_Cloud_B2C_Shop_Connector_Shopper_token_config" version="${shopper.version}" organizationId="${shopper.orgId}">
			<commerce-cloud-shopper-api:custom-headers ><![CDATA[#[output application/java
---
{
	"Content-Type" : "application/x-www-form-urlencoded"
}]]]></commerce-cloud-shopper-api:custom-headers>
		</commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-token-by-version-organization-id>
		<logger level="INFO" doc:name="Logger" doc:id="0baf0863-4471-4479-a804-f84955572a9d" message="#[payload]"/>
	</flow>
	<flow name="get-productFlow1" doc:id="b333736b-7c12-4ff5-a53e-7c1dc437a042" >
		<http:listener doc:name="Listener" doc:id="a693eb7b-034f-4be1-abfc-3a1b5900fbf6" config-ref="HTTP_Listener_config" path="/logout"/>
		<commerce-cloud-shopper-api:get-shopper-auth-organizations-oauth2-logout-by-version-organization-id doc:name="Logout Customer" doc:id="eaaee7bf-a859-4d30-8379-80538a923d0d" config-ref="Commerce_Cloud_B2C_Shop_Connector_Customer_auth_config" version="${shopper.version}" organizationId="${shopper.orgId}" clientId="${shopper.clientId}" refreshToken="#[attributes.queryParams.refresh_token]" channelId="${shopper.siteId}"/>
	</flow>
	<flow name="get-registred-refresh-tokenFlow" doc:id="d475e71b-a6a3-46d0-8dfc-82f672a6b81f" >
		<http:listener doc:name="Listener" doc:id="cdda0c02-ff85-4c5a-b93d-2e39018b7a8c" config-ref="HTTP_Listener_config" path="/refreshRegisteredUser" />
		<commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-token-by-version-organization-id doc:name="Get Refresh Token" doc:id="b311a4e7-3ed6-47b9-93a3-590c3aff02e7" config-ref="Commerce_Cloud_B2C_Shop_Connector_Shopper_token_config" version="${shopper.version}" organizationId="${shopper.orgId}">
			<commerce-cloud-shopper-api:content ><![CDATA[#[%dw 2.0
output application/x-www-form-urlencoded
---
{
	"client_id" : "${shopper.clientId}",
	"refresh_token" : attributes.queryParams.refresh_token,
	"grant_type" : "refresh_token"
}]]]></commerce-cloud-shopper-api:content>
			<commerce-cloud-shopper-api:custom-headers ><![CDATA[#[output application/java
---
{
	"Content-Type" : "application/x-www-form-urlencoded"
}]]]></commerce-cloud-shopper-api:custom-headers>
		</commerce-cloud-shopper-api:create-shopper-auth-organizations-oauth2-token-by-version-organization-id>
		<logger level="INFO" doc:name="Logger" doc:id="f816a1d1-e99e-497c-b6a8-d403facc121b" message="#[payload]" />
	</flow>
</mule>
----

== Steps for Authenticate Customer and Get Access Token

[start = 1]
. Create new Mule application.
. Click the Configuration XML tab at the base of the canvas.
. Copy and paste the above code.
. Save the project.
. Run the project as a Mule application by right-clicking the project name in Package Explorer and selecting Run As > Mule Application.
. Navigate to http://localhost:8081/customer/shopper-customers/{version}/organizations/{organizationId}/customers/actions/login, open Postman, and check the response.
. You should see the JWT token in the response header. Provide this JWT token from Postman as an authorization header parameter to perform operations.

== XML for Authorize Customer

Paste this code into the Studio XML editor to quickly load the flow for this example into your Mule app:

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:commerce-cloud-shopper-api="http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns:commerce-cloud-shopperapi="http://www.mulesoft.org/schema/mule/commerce-cloud-shopperapi"
	xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/commerce-cloud-shopperapi http://www.mulesoft.org/schema/mule/commerce-cloud-shopperapi/current/mule-commerce-cloud-shopperapi.xsd
http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api/current/mule-commerce-cloud-shopper-api.xsd">
	<flow name="guest-user-login-demoFlow">
		<http:listener
			doc:name="8081/customer/shopper-customers/{version}/organizations/{organizationId}/customers/actions/login"
			config-ref="HTTP_Listener_config"
			path="/customer/shopper-customers/{version}/organizations/{organizationId}/customers/actions/login"
			allowedMethods="POST">
			<http:response>
				<http:headers><![CDATA[#[output application/java
---
{
"Authorization" : message.attributes.headers.Authorization }]]]></http:headers>

			</http:response>
			<http:error-response statusCode="#[error.errorMessage.attributes.statusCode]">
				<http:body><![CDATA[#[output text/json --- error.errorMessage.payload]]]></http:body>

			</http:error-response>
		</http:listener>
		<commerce-cloud-shopper-api:create-customer-shopper-customers-organizations-customers-actions-login-by-version-organization-id
			doc:name="Authorize Customer"
			version="#[attributes.uriParams.version]"
			organizationId="#[attributes.uriParams.organizationId]" clientId="#[attributes.queryParams.clientId]"
			siteId="#[attributes.queryParams.siteId]" authorization="#[attributes.headers.Authorization]" config-ref="Commerce_Cloud_B2C_Shop_Connector_Shopper_token"/>

	</flow>
</mule>
----

== Steps for Authorize Customer

[start = 1]
. Create new Mule Application.
. Click the Configuration XML tab at the base of the canvas.
. Copy and paste the above code.
. Save the project.
. Run the project as a Mule application by right-clicking the project name in Package Explorer and selecting Run As > Mule Application.
. Navigate to http://localhost:8081/customer/shopper-customers/{version}/organizations/{organizationId}/customers/actions/login, open Postman, and check the response.
. You should see the JWT Token in the response header. Provide this JWT Token from Postman as authorization header parameter to perform operations.

== XML for Get Customer

Paste this code into your Studio XML editor to quickly load the flow for this example into your Mule app:

[source,xml,linenums]
----
xml <?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:commerce-cloud-shopper-api="http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api"
xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api http://www.mulesoft.org/schema/mule/commerce-cloud-shopper-api/current/mule-commerce-cloud-shopper-api.xsd">
<flow name="get-customerFlow"> <http:listener doc:name="8081/customer/shopper-customers/{version}/organizations/{organizationId}/customers/{customerId}" config-ref="HTTP_Listener_config" path="/customer/shopper-customers/{version}/organizations/{organizationId}/customers/{customerId}" allowedMethods="GET"> <http:error-response statusCode="#[error.errorMessage.attributes.statusCode]"> <http:body><![CDATA[#[output text/json --- error.errorMessage.payload]]]></http:body>

			</http:error-response>
		</http:listener>
		<commerce-cloud-shopper-api:get-customer-shopper-customers-organizations-customers-by-version-organization-id-customer-id
			doc:name="Get Customer"
			config-ref="Commerce_Cloud_Shopper_Connector_Customer_auth_config"
			version="#[attributes.uriParams.version]" organizationId="#[attributes.uriParams.organizationId]"
			customerId="#[attributes.uriParams.customerId]" siteId="#[attributes.queryParams.siteId]" />
	</flow>
</mule>
----

== Steps for Get Customer

[start = 1]
. Create new Mule Application.
. Click the Configuration XML tab at the base of the canvas.
. Copy and paste the above code.
. Save the project.
. Run the project as a Mule application by right-clicking the project name in Package Explorer and selecting Run As > Mule Application.
. Navigate to http://localhost:8081/customer/shopper-customers/{version}/organizations/{organizationId}/customers/{customerId}, open Postman, pass xref:Authorize Customer[Shopper JWT Token] from header and check the response.
. You should see the customer details in the output.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
